log
Thu 20 Apr 2023 09:44:21 PM UTC: 
 tests:  1|8
total_score: 0/70
15a8432
Fri 21 Apr 2023 01:10:04 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createTreeMap’:
treemap.c:44:25: error: ‘new’ is used uninitialized [-Werror=uninitialized]
   44 |   tree->lower_than = new->lower_than;
      |                      ~~~^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
15653d9
Fri 21 Apr 2023 01:11:04 AM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  1|8
total_score: 0/70
dab2c2d
Fri 21 Apr 2023 01:11:17 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
1c5810d
Fri 21 Apr 2023 02:17:15 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
5052845
Fri 21 Apr 2023 02:18:09 AM UTC: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
af77089
Fri 21 Apr 2023 02:27:54 AM UTC: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a031f23
